[package]
name = "lightshow"
version = "0.1.0"
authors = ["finnkauski <iwiivi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lighthouse = { git = "https://github.com/finnkauski/lighthouse" }
nom = "5.1.1"

[[bin]]
name = "lshow"
path = "src/main.rs"
